# uta

./: .flake8  .gitignore  .hgignore  .travis.yml  AUTHORS  CHANGELOG  Dockerfile  LICENSE  Makefile  README  README.md  README.rst  TODO  dev-notes.md  docker-compose.yml  ez_setup.py  pyproject.toml  setup.cfg  setup.py  sphinx_pypi_upload.py
.github/: CODEOWNERS
archive/: ncbi-parse-gff  perl-module-install  uta-pg-to-sqlite
dev/: conf-to-vars
doc/: Makefile  changelog.rst  command notes  conf.py  database.rst  description.rst  description.txt  design  ensembl-rest  goals  index.rst  installation.rst  issues.rst  license.rst  loading.rst  misc-figures.odg  modules.rst
etc/: alembic.ini  ensembl.sh  global.conf  logging.conf  ncbi-files.txt  pylintrc  test.conf  uta.conf  uta_dev@localhost.conf  uta_dev@postgres.conf  uta_dev@uic.com
loading/: Makefile  README  README.md  admin.mk  config.py  docker-compose.yml  main.conf  quick.conf  test.conf
migrate/: 20161024.sql  uta_1_1.sql
misc/: ensembl-debacle.py  export_mappings.py  garcia-setup.py  generate_alignment_metrics.py  uta-align-test.sh  uta-logo.odg
sbin/: assoc-acs-merge  coalesce_exonsets.py  conf-to-vars  create-schema  dbsnp-rs-summary-to-tsv  ensembl-fetch  ensembl-fetch-gene-tx-pep  ensembl-fetch-wrapper  exonset-filter  exonset-to-seqinfo  extract-makefile-documentation  fasta-hash-to-tsv  fasta-seq-info  fasta-to-seqinfo  fetch-tx-lrg  fetch-tx-ucsc  fetch_exonset-tx-uta  filter_exonset_transcripts.py  geneinfo-filter  generate-loading-data  ncbi-download  ncbi-download-docker  ncbi-fetch  ncbi-fetch-assoc-acs  ncbi-fetch-eutils  ncbi-fetch-exonsets  ncbi-fetch-gene-nm-np  ncbi-gff-import  ncbi-parse-gbff  ncbi-parse-gene2refseq  ncbi-parse-geneinfo  ncbi-parse-gff  ncbi_extract_gbff.py  ncbi_parse_genomic_gff.py  ncbi_process_mito.py  perl-module-install  pg-dump-schema-rename  seqinfo-filter  seqrepo-download  seqrepo-load  (+27 more)
sql/: associated_accessions.sql  bermuda-functions.pl  bermuda-functions.sql  bermuda.sql  bermuda.txt  create-roles.sql  dbviews.sql  discontiguous-tx.sql  drop-seqs.sql  ex_aln_cmp.sql  functions.sql  gene_summary_v.sql  grant-public-permissions.sql  internal-views.sql  preferred_accession.sql  (+6 more)
(+287 files in other folders)
